# temp-frost-timeseries-extractor

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml  test.py
docker-env/: Dockerfile  extractor-crontab  extractor.sh
frost_ts/: __main__.py  config.py  extractor.py  utils.py
